[package]
name = "Burgas-bus-microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = "0.4.38"
env_logger = "0.11.5"
once_cell = "1.20.2"
reqwest = "0.12.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
tokio = "1.41.1"
